--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.5",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
