--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "fs": "0.0.1-security",
+    "path-browserify": "^1.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
@@ -15,6 +17,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
     "socket.io-client": "^4.5.1",
+    "stockfish.js": "^10.0.2",
+    "stockfish.wasm": "^0.10.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
   }
 }
